# miden-formatting

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
formatting/: Cargo.toml
formatting/src/: hex.rs  lib.rs
formatting/src/prettier/: document.rs  mod.rs  print.rs  tests.rs
