[workspace]
resolver = "2"
members = ["formatting"]

[workspace.package]
version = "0.1.0"
authors = ["Miden Developers"]
repository = "https://github.com/0xPolygonMiden/miden-formatting"
homepage = "https://github.com/0xPolygonMiden/miden-formatting"
documentation = "https://github.com/0xPolygonMiden/miden-formatting"
categories = ["value-formatting"]
keywords = ["pretty-print", "prettier", "miden"]
license-file = "LICENSE"
readme = "README.md"
edition = "2021"

[workspace.dependencies]
