[workspace]
resolver = "2"
members = ["formatting"]

[workspace.package]
version = "0.1.1"
rust-version = "1.75"
authors = ["Miden Contributors"]
repository = "https://github.com/0xPolygonMiden/miden-formatting"
homepage = "https://github.com/0xPolygonMiden/miden-formatting"
documentation = "https://docs.rs/miden-formatting"
categories = ["value-formatting"]
keywords = ["pretty-print", "prettier", "miden"]
license = "MIT"
readme = "README.md"
edition = "2021"

[workspace.dependencies]
